...
      <AppBottomActionBar>
        <Button
          accessibilityLabel="Create mode"
          className="h-14 rounded-2xl"
          disabled={!modes.length && loading}
          onPress={() => router.push("/modes/new")}
          testID="create-mode"
        >
          <Text className="text-base font-bold">Create Mode</Text>
        </Button>
      </AppBottomActionBar>
    </View>
  );
...
